# polyglot-forge

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: python-blueprint.yml  release.yaml
blueprint/: README.md
blueprint/python/: Makefile  README.md  pyproject.toml
blueprint/python/.devcontainer/: devcontainer.json  setup.sh
blueprint/python/doc/adr/: 0002-use-uv-for-python.md  0003-ruff-format-code.md  0004-pytest-structure.md
blueprint/python/src/example_pkg/: __init__.py
blueprint/python/tests/: conftest.py
blueprint/python/tests/integration/: test_redis_container.py
blueprint/python/tests/unit/: test_core.py
doc/adr/: 0000-adr-template.md  0001-record-architecture-decisions.md
